# hangman-game

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
data/: words_case.txt
src/: main.py
src/hangman/: __init__.py  backend.py  backends.py  frontend.py  frontends.py  hangman.py  word_reader.py
src/hangman/frontends/: __init__.py  console_frontend.py  gui_frontend.py  stages.py
tests/hangman/: test_backend.py
