[tool.poetry]
name = "hangman-game"
version = "0.1.0"
description = ""
authors = ["AlexeyZaq <melnikov1991@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.14,>=3.9"
ruff = "^0.9.6"
pre-commit = "^4.1.0"
tabulate = "^0.9.0"
pytest = "^8.3.4"
pyinstaller = "^6.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


